docs(test): 重写单元测试与集成测试报告以反映微服务版本
旧报告基于已删除的单体后端（backend/ 目录）写，包名 com.cc91.controller、
backend/target/surefire-reports 等路径全部失效。本次按当前微服务架构
（7 服务 + 三层测试 + jqwik 模糊测试）完全重写。

unit-test-report.md（305 行）：
- 387 单元测试用例（Service/Security/Util/Client/Fuzz），跨 5 业务服务
- 23 条 jqwik property / 5150 tries 专章，含 user-service JwtUtil 空 token
  抛 IllegalArgumentException（A02）的 fuzz 发现
- 业务路径覆盖按 Service 分组列具体 @Nested 用例
- 附录 A 复现命令、附录 B JDK 24 + Mockito 兼容说明

integration-test-report.md（396 行）：
- 298 集成测试用例（@WebMvcTest Controller 切片 / @DataJpaTest Repository /
  InternalApiAuthFilter 配置 / @SpringBootTest contextLoads / Gateway 健康
  检查组件集成）
- 明确"未做的集成测试类型"清单（端到端集群启动、Testcontainers、渗透扫描）
- OWASP Top 10 嵌入式安全用例对照表
- 种子数据验证（V1 迁移默认管理员账号匹配预期密码 hash）
- 9 个归集测类别的 bug（A01 越权、A02 加密失败）

数据来源：qa agent 实际运行 7 服务 mvn test（不接受静态分析），耗时与
用例计数取自各服务 target/surefire-reports/TEST-*.xml 的 <testsuite>
根节点属性。

口径校验：unit(387) + integration(298) = 685，与 mvn 输出完全一致。